--- a/src/_layouts/sdk-documentation-layout.html
+++ b/src/_layouts/sdk-documentation-layout.html
@@ -4,7 +4,7 @@
 <html lang="{{ site.locale | slice: 0,2 | default: "en" }}" class="no-js">
   <head>
     {% include head.html %}
-    <link rel="stylesheet" href="{{ '/assets/css/api-layout.css' | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/sdk-documentation-layout.css' | relative_url }}">
     {% include head/custom.html %}
   </head>
 
