--- a/src/_sass/sdk-documentation-layout.scss
+++ b/src/_sass/sdk-documentation-layout.scss
@@ -98,6 +98,10 @@ $code-font-size: 1rem;
     $card-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23) !default !global;
 }
 
+mark {
+    background: hsla(49, 100%, 63%, 0.56); // hsla(58, 100%, 50%, 0.56);
+}
+
 section.page__content {
     font-family: $sans-serif;
     line-height: 1.5;
@@ -117,6 +121,78 @@ section.page__content h5 {
     flex-flow: column;
 }
 
+.search-box-container {
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    box-sizing: border-box;
+    width: 100%;
+    max-width: 820px;
+    padding: 8px 16px 8px 8px;
+    border-radius: 8px;
+    line-height: normal;
+    background: #fff;
+    border: solid 1px #dfe1e5;
+}
+
+.search-box-container:focus-within, .search-box-container:hover {
+    border: solid 1px #fafafa;
+    box-shadow: 0 1px 2px 0 rgba(60,64,67,.302), 0 2px 6px 2px rgba(60,64,67,.149);
+}
+
+.search-box-container .icon {
+    color: #9aa0a6;
+    width: 20px;
+    min-width: 20px;
+    height: 20px;
+    top: 0;
+}
+.search-box-container .icon svg {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+#search-box {
+    width: 100%;
+    height: 42px;
+    margin: 0;
+    padding: 0;
+    border-radius: 0;
+    margin-left: 8px;
+    resize: none;
+    font-weight: 700;
+    font-size: 1.5em;
+    line-height: normal;
+    box-shadow: none;
+    border: none;
+    outline: none;
+}
+#search-box::placeholder {
+    color: #9aa0a6;
+}
+
+#search-result-none {
+    margin-top: 1em;
+    margin-left: 36px;
+}
+
+#clear-button {
+    cursor: pointer;
+    user-select: none;
+    border-radius: 21px;
+    width: 42px;
+    min-width: 42px;
+    height: 42px;
+    padding: 11px;
+}
+
+#clear-button:hover {
+    background: #eee;
+}
+
+.hidden {
+    display: none !important;
+}
 
 // For the "main" symbol in the heading
 h2 strong {
@@ -309,6 +385,11 @@ ul {
 
 html {
     scroll-behavior: smooth
+}
+@media screen and (prefers-reduced-motion: reduce) {
+	html {
+		scroll-behavior: auto;
+	}
 }
 
 body.layout--sdk-documentation-layout #main a,
