--- a/src/_includes/head/custom.html
+++ b/src/_includes/head/custom.html
@@ -1,18 +1,15 @@
-<!-- <link crossorigin href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,400i,700,700i|IBM+Plex+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
-
-<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed:400,400i,700,700i&display=swap" rel="stylesheet"> -->
-
 <link
+    crossorigin
     href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:100,100i,400,400i,700,700i,900,900i&display=swap"
     rel="stylesheet"
 />
 
-<!-- <link crossorigin href="https://fonts.googleapis.com/css?family=Fira+Code:400,700&display=swap" rel="stylesheet"> -->
 <link
     crossorigin
     rel="stylesheet"
-    href="https://cdn.jsdelivr.net/gh/tonsky/FiraCode@2/distr/fira_code.css"
+    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,700;1,400;1,700&family=IBM+Plex+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
 />
+
 
 <script src="https://kit.fontawesome.com/523e3eb8bb.js" crossorigin="anonymous"></script>
 
