--- a/src/_sass/imports/minimal-mistakes/_archive.scss
+++ b/src/_sass/imports/minimal-mistakes/_archive.scss
@@ -12,10 +12,10 @@
     padding-right: $right-sidebar-width-narrow;
   }
 
-  @include breakpoint($x-large) {
-    width: calc(100% - #{$right-sidebar-width});
-    padding-right: $right-sidebar-width;
-  }
+  // @include breakpoint($x-large) {
+  //   width: calc(100% - #{$right-sidebar-width});
+  //   padding-right: $right-sidebar-width;
+  // }
 }
 
 .archive__item {
@@ -143,9 +143,9 @@
       margin-right: -1 * $right-sidebar-width-narrow;
     }
 
-    @include breakpoint($x-large) {
-      margin-right: -1 * $right-sidebar-width;
-    }
+    // @include breakpoint($x-large) {
+    //   margin-right: -1 * $right-sidebar-width;
+    // }
   }
 }
 
@@ -440,8 +440,8 @@
       padding-right: 0;
     }
 
-    @include breakpoint($x-large) {
-      padding-right: 0;
-    }
+    // @include breakpoint($x-large) {
+    //   padding-right: 0;
+    // }
   }
 }
