--- a/src/_sass/imports/minimal-mistakes/_navigation.scss
+++ b/src/_sass/imports/minimal-mistakes/_navigation.scss
@@ -13,28 +13,26 @@
   padding-left: 1em;
   padding-right: 1em;
   font-family: $sans-serif;
-  -webkit-animation: $intro-transition;
-  animation: $intro-transition;
-  -webkit-animation-delay: 0.3s;
+  // animation: $intro-transition;
   animation-delay: 0.3s;
 
-  @include breakpoint($x-large) {
-    max-width: $x-large;
+  @include breakpoint($max-width) {
+    max-width: $max-width;
   }
 
   ol {
     padding: 0;
     list-style: none;
-    font-size: $type-size-6;
+    font-size: $type-size-5;
 
     @include breakpoint($large) {
       float: right;
       width: calc(100% - #{$right-sidebar-width-narrow});
     }
 
-    @include breakpoint($x-large) {
-      width: calc(100% - #{$right-sidebar-width});
-    }
+    // @include breakpoint($x-large) {
+    //   width: calc(100% - #{$right-sidebar-width});
+    // }
   }
 
   li {
@@ -238,15 +236,11 @@
         height: 4px;
         background: $primary-color;
         width: 100%;
-        -webkit-transition: $global-transition;
         transition: $global-transition;
-        -webkit-transform: scaleX(0) translate3d(0, 0, 0);
         transform: scaleX(0) translate3d(0, 0, 0); // hide
       }
 
       &:hover:before {
-        -webkit-transform: scaleX(1);
-        -ms-transform: scaleX(1);
         transform: scaleX(1); // reveal
       }
     }
@@ -342,47 +336,44 @@
   @include breakpoint(max-width $large - 1px) {
     label {
       position: relative;
-      display: inline-block;
-      padding: 0.5em 2.5em 0.5em 1em;
+      width: 42px;
+      height: 42px;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
       color: $gray;
-      font-size: $type-size-6;
-      font-weight: bold;
       border: 1px solid $light-gray;
-      border-radius: $border-radius;
+      border-radius: 50%;
       z-index: 20;
-      -webkit-transition: 0.2s ease-out;
-      transition: 0.2s ease-out;
+      // transition: 0.2s ease-out;
       cursor: pointer;
 
-      &:before,
-      &:after {
-        content: "";
-        position: absolute;
-        right: 1em;
-        top: 1.25em;
-        width: 0.75em;
-        height: 0.125em;
-        line-height: 1;
-        background-color: $gray;
-        -webkit-transition: 0.2s ease-out;
-        transition: 0.2s ease-out;
-      }
+      // &:before,
+      // &:after {
+      //   content: "";
+      //   position: absolute;
+      //   right: 1em;
+      //   top: 1.25em;
+      //   width: 0.75em;
+      //   height: 0.125em;
+      //   line-height: 1;
+      //   background-color: $gray;
+      //   // transition: 0.2s ease-out;
+      // }
 
-      &:after {
-        -webkit-transform: rotate(90deg);
-        -ms-transform: rotate(90deg);
-        transform: rotate(90deg);
-      }
+      // &:after {
+      //   transform: rotate(90deg);
+      // }
 
       &:hover {
         color: #fff;
         border-color: $gray;
         background-color: mix(white, #000, 20%);
 
-        &:before,
-        &:after {
-          background-color: #fff;
-        }
+        // &:before,
+        // &:after {
+        //   background-color: #fff;
+        // }
       }
     }
 
@@ -432,7 +423,6 @@
 
 .nav__list .nav__items {
   margin: 0;
-  font-size: 1.25rem;
 
   a {
     color: inherit;
@@ -451,24 +441,18 @@
     opacity: 0%;
     overflow: hidden;
     z-index: 10;
-    -webkit-transition: 0.3s ease-in-out;
-    transition: 0.3s ease-in-out;
-    -webkit-transform: translate(0, 10%);
-    -ms-transform: translate(0, 10%);
+    // transition: 0.3s ease-in-out;
     transform: translate(0, 10%);
   }
 }
 
 @include breakpoint(max-width $large - 1px) {
   .nav__list input:checked ~ .nav__items {
-    -webkit-transition: 0.5s ease-in-out;
-    transition: 0.5s ease-in-out;
+    // transition: 0.5s ease-in-out;
     max-height: 9999px; /* exaggerate max-height to accommodate tall lists*/
     overflow: visible;
     opacity: 1;
     margin-top: 1em;
-    -webkit-transform: translate(0, 0);
-    -ms-transform: translate(0, 0);
     transform: translate(0, 0);
   }
 }
@@ -486,7 +470,7 @@
   margin: 0.5rem 0;
   padding: 0.25rem 0;
   font-family: $sans-serif-narrow;
-  font-size: $type-size-6;
+  font-size: $type-size-5;
   font-weight: bold;
   text-transform: uppercase;
   border-bottom: 1px solid $border-color;
@@ -507,7 +491,7 @@
 
   .nav__title {
     color: #fff;
-    font-size: $type-size-6;
+    font-size: $type-size-5;
     background: $primary-color;
     border-top-left-radius: $border-radius;
     border-top-right-radius: $border-radius;
@@ -524,7 +508,7 @@
   padding: 0;
   width: 100%;
   list-style: none;
-  font-size: $type-size-6;
+  font-size: $type-size-5;
 
   @include breakpoint($large) {
     font-size: $type-size-7;
