--- a/src/_sass/imports/minimal-mistakes/_reset.scss
+++ b/src/_sass/imports/minimal-mistakes/_reset.scss
@@ -18,9 +18,9 @@ html {
     font-size: 20px;
   }
 
-  @include breakpoint($x-large) {
-    font-size: 22px;
-  }
+  // @include breakpoint($x-large) {
+  //   font-size: 22px;
+  // }
 
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
