--- a/src/_sass/sdk-documentation-layout.scss
+++ b/src/_sass/sdk-documentation-layout.scss
@@ -1,5 +1,10 @@
 // Stylesheet for the typescript_doc layout.
 @charset "utf-8";
+
+@import 'imports/astra';
+
+@import 'imports/utilities';
+
 // $h4-font-size:  1rem !default;
 // $primary: #0066ce !default;
 // $secondary: #999 !default;
@@ -10,10 +15,6 @@ $sans-serif: 'IBM Plex Sans', 'Source Sans Pro', sans-serif !default;
 @import 'imports/astra';
 @import 'imports/minimal-mistakes'; // main partials
 @import 'imports/minimal-mistakes-overrides'; 
-
-@media (min-width: 64em) {
-    .page { padding-right: 0; }
-}
 
 $subheading-font-size: 0.7rem;
 $h3-font-size: 1.25rem;
@@ -129,6 +130,8 @@ section.page__content h5 {
     width: 100%;
     max-width: 820px;
     padding: 8px 16px 8px 8px;
+    margin-top: 2em;
+    margin-bottom: 4em;
     border-radius: 8px;
     line-height: normal;
     background: #fff;
@@ -142,9 +145,9 @@ section.page__content h5 {
 
 .search-box-container .icon {
     color: #9aa0a6;
-    width: 20px;
-    min-width: 20px;
-    height: 20px;
+    width: 32px;
+    min-width: 32px;
+    height: 32px;
     top: 0;
 }
 .search-box-container .icon svg {
@@ -172,8 +175,9 @@ section.page__content h5 {
 }
 
 #search-result-none {
-    margin-top: 1em;
-    margin-left: 36px;
+    margin-top: 0;
+    margin-bottom: 4em;
+    margin-left: 48px;
 }
 
 #clear-button {
@@ -196,7 +200,7 @@ section.page__content h5 {
 
 // For the "main" symbol in the heading
 h2 strong {
-    color: $primary;
+    color: $primary-color;
     font-weight: 700;
 }
 
@@ -235,16 +239,6 @@ h2 span.subhead, h3 span.subhead {
     position: relative; // To position the highlighting mark
 }
 
-/* Categories */
-.index h3 {
-    font-family: $sans-serif;
-    font-size: $h3-font-size;
-    background: transparent;
-    border: none;
-    font-weight: 700;
-    margin: 0;
-    padding: 0;
-}
 
 code, .code {
     font-family: $monospace;
@@ -331,7 +325,7 @@ strong var {
 
 /* Card header name */
 .card h3 strong {
-    color: $primary;
+    color: $primary-color;
 }
 
 
@@ -353,8 +347,9 @@ h4 {
 
 ul {
     line-height: 1.333;
-    list-style: none;
-    padding-left: 0;
+    list-style: square;
+    margin-left: 10px;
+    padding-left: 10px;
 }
 
 .page__content dl.inset {
@@ -365,10 +360,10 @@ ul {
     font-size: 1rem;
 }
 
-.page__content dd ul {
-    list-style: square;
-    margin-left: 10px;
-    padding-left: 10px;
+.page__content div.code ul {
+    list-style: none;
+    margin-left: 0;
+    padding-left: 0;
 }
 
 
@@ -396,7 +391,7 @@ body.layout--sdk-documentation-layout #main a,
 body.layout--sdk-documentation-layout #main a:active,
 body.layout--sdk-documentation-layout #main a:visited,
 body.layout--sdk-documentation-layout #main a:hover {
-    color: $primary;
+    color: $primary-color;
     text-decoration: none;
 }
 
@@ -461,6 +456,12 @@ thead {
 tr {
     width: 100%;
 }
+
+tr code { 
+    // Avoid breaking code in tables (often used as first column index)
+    white-space: nowrap;
+}
+
 td {
     border-bottom-color: #ddd;
 }
@@ -503,7 +504,17 @@ ul.index {
 
 .index li a:hover,
 .index li a:active {
-    color: $primary;
+    color: $primary-color;
+}
+/* Categories */
+.index h3 {
+    font-family: $sans-serif;
+    font-size: $h3-font-size;
+    background: transparent;
+    border: none;
+    font-weight: 700;
+    margin: 0;
+    padding: 0;
 }
 
 /* Anchor icon */
@@ -717,6 +728,7 @@ div.flags {
 
 // For {...} blocks (unions, intersections)
 ul.type-block {
+    list-style: none;
     margin: 0;
 }
 ul.type-block li {
@@ -729,13 +741,34 @@ figure.highlight {
     border-radius: 8px;
 }
 
+// @media (min-width: $small) {
+//     body {
+//         background: rgb(255, 223, 211);
+//     }
+// }
+// @media (min-width: $medium) {
+//     body {
+//         background: rgb(254, 200, 216);
+//     }
+// }
 
-@media (min-width: 80em) {
-    .sidebar {
-        width: calc(200px - 1em);
-    }
-    .page {
-        width: calc(100% - 200px);
-        padding-right: 200px;
-    }
+// @media (min-width: $large) {
+//     body {
+//         background: rgb(224, 187, 228);
+//     }
+// }
+
+
+@media (min-width: $medium) {
+    .page { padding-right: 0; }
 }
+
+// @media (min-width: $large) {
+//     .sidebar {
+//         width: #{$right-sidebar-width};
+//     }
+//     .page {
+//         width: calc(100% - #{$right-sidebar-width});
+//         padding-right: 0;
+//     }
+// }
