--- a/src/_sass/imports/minimal-mistakes/_page.scss
+++ b/src/_sass/imports/minimal-mistakes/_page.scss
@@ -3,6 +3,7 @@
    ========================================================================== */
 
 #main {
+  display: block;
   @include clearfix;
   margin-left: auto;
   margin-right: auto;
@@ -16,6 +17,7 @@
 
   @include breakpoint($max-width) {
     max-width: $max-width;
+    display: flex;
   }
 }
 
@@ -36,11 +38,14 @@ body {
 }
 
 .page {
-  @include breakpoint($large) {
-    float: right;
-    width: calc(100% - #{$right-sidebar-width-narrow});
-    padding-right: $right-sidebar-width-narrow;
-  }
+  max-width: 760px;
+  margin: auto;
+  // @include breakpoint($large) {
+  //   float: right;
+  //   width: calc(100% - #{$right-sidebar-width-narrow});
+  //   padding-right: $right-sidebar-width-narrow;
+  // }
+  
 
   // @include breakpoint($x-large) {
   //   width: calc(100% - #{$right-sidebar-width});
