Updated contents, examples.

--- a/src/_sass/imports/minimal-mistakes/_navigation.scss
+++ b/src/_sass/imports/minimal-mistakes/_navigation.scss
@@ -471,6 +471,8 @@
   padding: 0.25rem 0;
   font-family: $sans-serif-narrow;
   font-size: $type-size-5;
+  line-height: 1;
+  letter-spacing: -0.05ex;
   font-weight: bold;
   text-transform: uppercase;
   border-bottom: 1px solid $border-color;
